Tests added to the project

--- a/stack.yaml
+++ b/stack.yaml
@@ -17,9 +17,9 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver:
-  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/20/16.yaml
-
+#resolver:
+#  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/20/16.yaml
+resolver: ghc-9.2.2
 # User packages to be built.
 # Various formats can be used as shown in the example below.
 #
@@ -35,11 +35,9 @@ packages:
 # These entries can reference officially published versions as well as
 # forks / in-progress versions pinned to a git hash. For example:
 #
-# extra-deps:
-# - acme-missiles-0.3
-# - git: https://github.com/commercialhaskell/stack.git
-#   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
-#
+extra-deps:
+  - HUnit-1.6.2.0
+  - call-stack-0.4.0
 # extra-deps: []
 
 # Override default flag values for local packages and extra-deps
